--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="favicon.ico" rel="icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
-  <link href="dist/css/app.min.css" rel="stylesheet">
+  <link href="dist/css/bundle.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -191,7 +191,7 @@
 
   <a href="index.html#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-  <script src="dist/js/app.min.js"></script>
+  <script src="dist/js/bundle.min.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161546265-1"></script>
   <script>
