--- a/src/index.html
+++ b/src/index.html
@@ -189,6 +189,24 @@
     </div>
   </div>
 
+  <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="videoModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <iframe id="ytPlayer" type="text/html" width="100%" height="320px"
+            frameborder="0" allowfullscreen>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <a href="index.html#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
   <script src="dist/js/bundle.min.js"></script>
