--- a/src/index.html
+++ b/src/index.html
@@ -200,8 +200,12 @@
           </button>
         </div>
         <div class="modal-body">
-          <iframe id="ytPlayer" type="text/html" width="100%" height="320px"
-            frameborder="0" allowfullscreen>
+          <div class="d-flex justify-content-center" id="videoSpinner">
+            <div class="spinner-grow text-danger m-4" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          <iframe id="ytPlayer" type="text/html" width="100%" height="320px" frameborder="0" allowfullscreen>
         </div>
       </div>
     </div>
