--- a/src/index.html
+++ b/src/index.html
@@ -190,22 +190,34 @@
   </div>
 
   <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
+    aria-hidden="true" data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="videoModalLabel">Modal title</h5>
+          <h5 class="modal-title text-warning" id="videoModalLabel"></h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <div class="d-flex justify-content-center" id="videoSpinner">
+
+          <div id="videoSpinner" class="d-flex justify-content-center">
             <div class="spinner-grow text-danger m-4" role="status">
               <span class="sr-only">Loading...</span>
             </div>
           </div>
-          <iframe id="ytPlayer" type="text/html" width="100%" height="320px" frameborder="0" allowfullscreen>
+
+          <div id="visitChannel" class="m-4 text-center">
+            <h5 class="mb-2">We could not find a Live Stream now.</h5>
+            <small>Please visit Youtube channel for more details.</small>
+            <p class="mt-2">
+              <a id="visitChannelLink" class="text-danger" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-youtube"></i>
+                <span id="visitChannelName"></span>
+              </a>
+            </p>
+          </div>
+
         </div>
       </div>
     </div>
