Youtube loading fixes

--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
         </div>
         <div class="modal-body">
 
-          <div id="videoSpinner" class="d-flex justify-content-center">
+          <div id="videoSpinner" class="justify-content-center">
             <div class="spinner-grow text-danger m-4" role="status">
               <span class="sr-only">Loading...</span>
             </div>
