Youtube Player Modal - UI optimized

--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,10 @@
         </div>
         <div class="modal-body">
 
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+
           <div id="videoSpinner" class="justify-content-center">
             <div class="spinner-grow text-danger m-4" role="status">
               <span class="sr-only">Loading...</span>
