--- a/src/index.html
+++ b/src/index.html
@@ -190,15 +190,9 @@
   </div>
 
   <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel"
-    aria-hidden="true" data-keyboard="false" data-backdrop="static">
+    aria-hidden="true" data-keyboard="false">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title text-warning" id="videoModalLabel"></h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
         <div class="modal-body">
 
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -211,10 +205,10 @@
             </div>
           </div>
 
-          <div id="visitChannel" class="m-4 text-center">
-            <h5 class="mb-2">We could not find a Live Stream now.</h5>
+          <div id="visitChannel" class="m-1 m-md-3 m-lg-4 text-center">
+            <h5 class="mb-2">We could not find a live stream now.</h5>
             <small>Please visit Youtube channel for more details.</small>
-            <p class="mt-2">
+            <p class="m-2">
               <a id="visitChannelLink" class="text-danger" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-youtube"></i>
                 <span id="visitChannelName"></span>
