Minor color updates

--- a/src/index.html
+++ b/src/index.html
@@ -79,10 +79,10 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <p class="mb-2 mb-sm-3 mb-md-4">
-            <span id="timeZones" class="btn btn-outline-info p-0 m-2">
+            <span id="timeZones" class="btn btn-outline-cs-blue p-0 m-2">
               <i class="fas fa-user-clock pl-2"></i>
             </span>
-            <span id="instructions" class="btn btn-outline-info m-2">
+            <span id="instructions" class="btn btn-outline-cs-blue m-2">
               <i class="fas fa-bible pr-3"></i>Guidelines
             </span>
           </p>
