Schedule min-height fix

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
             </li>
           </ul>
         </div>
-        <div id="holyMass" class="tab-content pt-3 pt-md-4 pb-3 pb-md-5">
+        <div id="holyMass" class="tab-content pt-3 pt-md-4">
         </div>
       </div>
     </section>
