--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,37 @@
     </div>
   </section>
 
+  <section id="liveGallery">
+    <div class="container py-3 py-md-5">
+      <div id="liveSlider">
+        <div>
+          <img src="https://i.ytimg.com/vi/-0S766r63IQ/mqdefault_live.jpg" alt="">
+          <h5>Shekinah TV</h5>
+        </div>
+        <div>
+          <img src="https://i.ytimg.com/vi/39PL5N8plik/mqdefault_live.jpg" alt="">
+          <h5>Goodness TV</h5>
+        </div>
+        <div>
+          <img src="https://i.ytimg.com/vi/BX_HBFDggKg/mqdefault_live.jpg" alt="">
+          <h5>Shalom TV</h5>
+        </div>
+        <div>
+          <img src="https://i.ytimg.com/vi/t8LzIPQ-dus/mqdefault_live.jpg" alt="">
+          <h5>St George Forance Church, Aruvithura</h5>
+        </div>
+        <div>
+          <img src="https://i.ytimg.com/vi/jo5m-z0VhYk/mqdefault_live.jpg" alt="">
+          <h5>Some other channel</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="features" class="p-2 p-md-4">
     <div class="container">
-      <div class="row">
+      <h2 class="wow text-center text-uppercase font-weight-bold">Live Online Holy Mass Schedule</h2>
+      <div class="row wow">
         <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
           <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-globe-americas"></i>
           <span class="d-flex-item">Live Holy Masses from all around the World</span>
