Live Slider Gallery - updates

--- a/src/index.html
+++ b/src/index.html
@@ -46,24 +46,49 @@
     <div class="container py-3 py-md-5">
       <div id="liveSlider">
         <div>
-          <img src="https://i.ytimg.com/vi/-0S766r63IQ/mqdefault_live.jpg" alt="">
-          <h5>Shekinah TV</h5>
+          <div class="thumb">
+            <img src="https://i.ytimg.com/vi/-0S766r63IQ/mqdefault_live.jpg" alt="">
+            <h5>Shekinah TV</h5>
+            <p>Holy Mass, Adoration, News, Catholic Church</p>
+            <p class="live">
+              <span>LIVE</span>
+            </p>
+          </div>
         </div>
         <div>
-          <img src="https://i.ytimg.com/vi/39PL5N8plik/mqdefault_live.jpg" alt="">
-          <h5>Goodness TV</h5>
+          <div class="thumb">
+            <img src="https://i.ytimg.com/vi/39PL5N8plik/mqdefault_live.jpg" alt="">
+            <h5>Goodness TV</h5>
+            <p>Holy Mass, Adoration, News, Catholic Church</p>
+            <p class="upcoming">
+              <span>UPCOMING</span>
+              <span><i class="fas fa-stopwatch"></i>10:30 AM</span>
+            </p>
+          </div>
         </div>
         <div>
-          <img src="https://i.ytimg.com/vi/BX_HBFDggKg/mqdefault_live.jpg" alt="">
-          <h5>Shalom TV</h5>
+          <div class="thumb">
+            <img src="https://i.ytimg.com/vi/BX_HBFDggKg/mqdefault_live.jpg" alt="">
+            <h5>Shalom TV</h5>
+            <p>Holy Mass, Adoration, News, Catholic Church</p>
+            <p>LIVE</p>
+          </div>
         </div>
         <div>
-          <img src="https://i.ytimg.com/vi/t8LzIPQ-dus/mqdefault_live.jpg" alt="">
-          <h5>St George Forance Church, Aruvithura</h5>
+          <div class="thumb">
+            <img src="https://i.ytimg.com/vi/t8LzIPQ-dus/mqdefault_live.jpg" alt="">
+            <h5>St George Forance Church, Aruvithura</h5>
+            <p>Holy Mass, Adoration, News, Catholic Church</p>
+            <p>LIVE</p>
+          </div>
         </div>
         <div>
-          <img src="https://i.ytimg.com/vi/jo5m-z0VhYk/mqdefault_live.jpg" alt="">
-          <h5>Some other channel</h5>
+          <div class="thumb">
+            <img src="https://i.ytimg.com/vi/jo5m-z0VhYk/mqdefault_live.jpg" alt="">
+            <h5>Some other channel</h5>
+            <p>Holy Mass, Adoration, News, Catholic Church</p>
+            <p>LIVE</p>
+          </div>
         </div>
       </div>
     </div>
