Live Gallery: changed to Glider.js

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,9 @@
           </div>
         </div>
       </div>
+      <button aria-label="Previous" class="glider-prev"><i class="fas fa-chevron-left"></i></button>
+      <button aria-label="Next" class="glider-next"><i class="fas fa-chevron-right"></i></button>
+      <div role="tablist" class="dots"></div>
     </div>
   </section>
 
