--- a/src/index.html
+++ b/src/index.html
@@ -46,13 +46,9 @@
     <div class="container py-3 py-md-5">
       <div id="liveSlider">
         <div>
-          <div class="thumb">
-            <img src="https://i.ytimg.com/vi/-0S766r63IQ/mqdefault_live.jpg" alt="">
-            <h5>Shekinah TV</h5>
-            <p>Holy Mass, Adoration, News, Catholic Church</p>
-            <p class="live">
-              <span>LIVE</span>
-            </p>
+          <div class="thumb search">
+            <img src="dist/img/intro-bg.jpg" height="250px" alt="">
+            <h5>Searching Live Streams...</h5>
           </div>
         </div>
       </div>
