Live Gallery: No Lives found message added on load

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
     <div class="container py-3 py-md-5">
       <div id="liveSlider">
         <div>
-          <div class="thumb search">
-            <img src="dist/img/intro-bg.jpg" height="250px" alt="">
+          <div class="thumb search p-5">
+            <i class="fab fa-youtube fa-7x"></i>
             <h5>Searching Live Streams...</h5>
           </div>
         </div>
@@ -60,7 +60,7 @@
 
   <section id="features" class="p-2 p-md-4">
     <div class="container">
-      <h2 class="wow text-center text-uppercase font-weight-bold">Live Online Holy Mass Schedule</h2>
+      <h2 class="mt-4 wow text-center text-uppercase font-weight-bold">Live Online Holy Mass Schedule</h2>
       <div class="row wow">
         <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
           <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-globe-americas"></i>
