--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,9 @@
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html#intro">Home</a></li>
+          <!-- <li><a href="index.html#intro">Home</a></li> -->
+          <li><a href="#liveGallery">Live Now</a></li>
+          <li><a href="#features">Holy Mass Schedule</a></li>
           <li><a href="http://jyinfopark.in/">Contact</a></li>
         </ul>
       </nav>
